# money-flow

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  LICENSE  Makefile  README.md  TESTING.md  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt
.github/workflows/: api-deploy.yml  api-tests.yml  automated-release.yml  data-pipeline.yml  deployment-status.yml  full-deploy.yml  integration-tests.yml  pre-commit.yml  terraform-staging.yml  web-app-deploy.yml  web-app-tests.yml
api/: Dockerfile  README.md  cloudbuild.yaml  database.py  main.py  models.py  requirements-test.txt  requirements.txt
api/tests/: __init__.py  test_database.py  test_main.py  test_models.py
cloud-function/: cloud_function_main.py  main.py  requirements.txt
data-pipeline/: ol-pipeline.yaml  pipeline-spec.yaml  requirements.txt  test-pipeline.yaml
data/processed/: datapackage.json  georgian_budget.csv  georgian_budget.json
database/init/: 01_schema.sql  (+2 more)
docs/: automated-release.md  automation.md  getting-started.md  terraform-cloudbuild-ci-cd.md
moneyflow-back/: README.md  cloudbuild.yaml  database.py  main.py  requirements.txt
moneyflow-front/: Dockerfile  README.md  app.py  cloudbuild.yaml  requirements.txt
terraform/: README.md  cloud-build.tf  cloud-function.tf  cloud-run.tf  cloud-sql.tf  cloudbuild.yaml  dns.tf  iam.tf  load-balancer.tf  main.tf  monitoring.tf  outputs.tf  scheduler.tf  secrets.tf  storage.tf  terraform.tfvars.example  variables.tf
tests/: test_integration.py
web-app/: Dockerfile  README.md  app.py  cloudbuild.yaml  requirements-test.txt  requirements.txt
(+56 files in other folders)
