[project]
name = "money-flow"
version = "0.1.0"
description = "Money flow tracking and budget management system"
authors = [{name = "Money Flow Team"}]
readme = "README.md"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    ".env",
    "build",
    "dist",
    ".mypy_cache",
    ".pytest_cache"
]

[tool.pytest.ini_options]
testpaths = [
    "moneyflow-back/tests",
    "moneyflow-front/web_app_tests"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=moneyflow-back",
    "--cov=moneyflow-front",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (run when both services modified)",
    "unit: marks tests as unit tests",
    "api: marks tests as API/backend tests",
    "webapp: marks tests as moneyflow-front/frontend tests"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]
